Update fix for calendar - Wrap text and change time format

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10,3 +10,8 @@
     padding: 35px 0;
     text-align: center;
 }
+
+.fc-time, .fc-title {
+    white-space: normal;
+    word-wrap: break-word;
+}
